style.css
*,
*::after,
*::before {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
  font-family: "Rubik", sans-serif;
}
li {
  list-style-type: none;
}

a {
  text-decoration: none;
  color: inherit;
}
button {
  border: none;
  width: fit-content;
  height: fit-content;
  &:hover {
    cursor: pointer;
  }
}
p {
  color: hsl(0, 0%, 50%);
  line-height: 2.5ch;
}
html,
body {
  width: 100%;
  height: max-content;
}

@media screen and (max-width: 800px) {
  body {
    &:has(header > nav.open) {
      & > footer > ul:last-child {
        position: absolute;
        top: 90%;
        transform: translateY(-100%);
        z-index: 100;
      }
    }
  }
}

header,
footer {
  padding-inline: 10%;
}

header {
  position: relative;
  display: flex;
  justify-content: space-between;
  gap: 3em;
  align-items: center;
  width: 100%;
  height: 100px;

  & > span {
    display: block;
    width: 18px;
    height: 15px;
    background-image: url(./images/icon-hamburger.svg);
    z-index: 500;
    &:hover {
      cursor: pointer;
    }
  }

  & > li {
    z-index: 50;
  }

  @media screen and (max-width: 1200px) {
    padding-inline: 5%;
  }
  @media screen and (min-width: 800px) {
    & > span {
      position: relative;
      display: none;
      z-index: 100;
    }
  }

  @media screen and (max-width: 800px) {
    &::after {
      position: absolute;
      top: 0;
      left: 0;
      top: 0;
      content: "";
      width: 100%;
      height: 0svh;
      background-color: hsla(229, 53%, 22%, 0.9);
      z-index: 30;
      transition: all 0.25s ease-out;
    }

    &:has(nav.open) {
      & > span {
        background-image: url(./images/icon-close.svg);
        background-repeat: no-repeat;
        background-position: center;
      }
      & > li {
        & > svg > g {
          & > circle {
            fill: #fff;
          }
          & > g > path {
            fill: hsla(229, 53%, 22%, 0.9);
          }
          & > path {
            fill: white;
          }
        }
      }

      &::after {
        height: 100svh;
      }

      & > nav {
        height: 50svh;
      }
    }
  }
}
header > nav {
  z-index: 41;
  transition: all 0.25s ease-out;
  & > ul {
    display: flex;
    align-items: center;
    gap: 3em;

    & > li {
      & > a {
        transition: all 0.2s ease-out;
        &:hover {
          color: hsl(0, 94%, 66%);
        }
      }
      & > button {
        background-color: hsl(0, 94%, 66%);
        outline: 2px solid hsl(0, 94%, 66%);
        color: white;
        padding: 0.75em 2.5em;
        border-radius: 3px;
        transition: all 0.25s ease-out;

        &:hover {
          background-color: #fff;
          color: hsl(0, 94%, 66%);
          cursor: pointer;
        }
      }
    }
  }

  @media screen and (max-width: 800px) {
    position: absolute;
    left: 0;
    top: 120px;
    height: 0svh;
    width: 100%;
    overflow: hidden;

    & > ul {
      flex-direction: column;
      gap: 0;
      width: 100%;
      padding-inline: 5%;

      & > li {
        text-transform: uppercase;
        padding-block: 1.5em;
        color: white;
        font-size: 1.25em;
        border-top: 1px solid hsla(0, 0%, 90%, 0.2);
        width: 100%;
        text-align: center;
        &:last-child {
          padding-block-end: 0;
          & > button {
            width: 100%;
            background: transparent;
            outline: 2px solid white;
            font-size: 1em;
            text-transform: uppercase;
            letter-spacing: 0.25ch;
            &:hover {
              color: white;
            }
          }
        }
      }
    }
  }
}

main {
  position: relative;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 10svh;
}
section {
  padding-inline: 10%;
}

div.shapeBg {
  background-color: hsl(231, 69%, 60%);
  z-index: -1;
}

section#heroSection {
  position: relative;
  display: grid;
  grid-template-columns: clamp(350px, 40%, 600px) auto;
  padding-inline-end: 5%;
  margin-top: 100px;

  & > img {
    justify-self: end;
    object-fit: contain;
  }
  & > article {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: start;
    gap: 2em;

    & > h1 {
      font-size: 2.5em;
    }

    & > div#getItButton {
      display: flex;
      gap: 1em;
      justify-content: start;
      align-items: center;
      & > button {
        padding: 1em 2.5em;
        border-radius: 3px;
        background-color: hsl(0, 0%, 90%);
        box-shadow: 0 5px 8px 0px rgba(0, 0, 0, 0.15);
        transition: all 0.25s ease-out;
        outline: 2px solid transparent;

        &:hover {
          outline: 2px solid black;
          background-color: #fff;
        }

        &:first-child {
          background-color: hsl(231, 56%, 55%);
          color: white;
          &:hover {
            background-color: #fff;
            color: hsl(231, 56%, 55%);
            outline: 2px solid hsl(231, 56%, 55%);
          }
        }
      }
    }
  }

  div.shapeBg {
    position: absolute;
    bottom: 0;
    right: 0;
    width: 25%;
    height: 75%;
    border-top-left-radius: 150px;
    border-bottom-left-radius: 150px;
  }

  @media screen and (max-width: 1200px) {
    display: flex;
    flex-direction: column-reverse;
    place-items: center;
    gap: 5em;
    & > img {
      width: clamp(400px, 100%, 100px);
    }

    & > article {
      align-items: center;
      text-align: center;
    }

    & > div.shapeBg {
      top: 10%;
      height: 40%;
      width: 50%;
      min-width: 350px;
    }
  }
}
/* ... */

